--- a/force-app/main/default/aura/AdminPanel/AdminPanel.cmp
+++ b/force-app/main/default/aura/AdminPanel/AdminPanel.cmp
@@ -9,45 +9,35 @@
 
     <aura:attribute name="jobs" type="List"/>
 
+    <aura:method name="refresh" action="{!c.doInit}"/>
+
     <lightning:card title="Batches">
-        <lightning:accordion aura:id="accordion">
+        <c:RRSpinner aura:id="spinner" size="medium"/>
             <div class="ad-panel">
                 <aura:iteration items="{!v.jobs}" var="job">
                     <div class="slds-grid ad-card">
+                        <c:RRSpinner showSpinner="{!job.showSpinner}" size="small"/>
                         <div class="slds-col slds-size_1-of-3">
                             <p class="slds-text-heading--label-medium slds-text-title_bold">{!job.jobName}</p>
                         </div>
                         <div class="slds-col slds-size_2-of-3">
                             <div class="slds-grid">
                                 <div class="slds-col slds-size_1-of-3 slds-p-left--medium slds-p-right--medium">
-                                    <p class="{!'slds-text-heading--label-normal ad-state ' + job.state}">{!job.state}</p>
+                                    <p class="{!'slds-text-heading--label-normal ' + job.css}">{!job.state}</p>
                                 </div>
                                 <div class="slds-col slds-size_1-of-3 slds-align_absolute-center">
                                     <button class="slds-button slds-button_outline-brand"
-                                            data-record="{!job.jobName}" onclick="{!c.clickRun}">Run</button>
+                                            data-record="{!job.jobName}" onclick="{!c.clickRun}"
+                                            disabled="{!not(job.state == 'NOT STARTED')}">Run
+                                    </button>
                                 </div>
                                 <div class="slds-col slds-size_1-of-3 slds-align_absolute-center">
                                     <button class="slds-button slds-button_text-destructive"
-                                            data-record="{!job.jobName}" onclick="{!c.clickStop}">Stop</button>
+                                            data-record="{!job.jobName}" onclick="{!c.clickStop}"
+                                            disabled="{!job.state == 'NOT STARTED'}">Stop
+                                    </button>
                                 </div>
                             </div>
-                            <lightning:accordionSection label="Description">
-                                <aura:set attribute="body">
-                                    <div class="ad-desc">
-                                        <lightning:input class="slds-p-around--x-small"
-                                                         type="datetime-local"
-                                                         label="Next Fire Time"
-                                                         value="{!job.nextFT}"
-                                                         disabled="true"/>
-
-                                        <lightning:input class="slds-p-around--x-small"
-                                                         type="datetime-local"
-                                                         label="Previous Fire Time"
-                                                         value="{!job.prevFT}"
-                                                         disabled="true"/>
-                                    </div>
-                                </aura:set>
-                            </lightning:accordionSection>
                         </div>
                     </div>
                 </aura:iteration>
@@ -57,22 +47,25 @@
                     </div>
                     <div class="slds-col slds-size_1-of-6">
                         <button class="slds-button slds-button_outline-brand"
-                                data-record="all" onclick="{!c.clickRunMode}">Run for all</button>
+                                data-record="all" onclick="{!c.clickRunMode}">Run for all
+                        </button>
                     </div>
                     <div class="slds-col slds-size_1-of-6">
                         <button class="slds-button slds-button_outline-brand"
-                                data-record="pi" onclick="{!c.clickRunMode}">Run for PI's</button>
+                                data-record="pi" onclick="{!c.clickRunMode}">Run for PI's
+                        </button>
                     </div>
                     <div class="slds-col slds-size_1-of-6">
                         <button class="slds-button slds-button_outline-brand"
-                                data-record="hcp" onclick="{!c.clickRunMode}">Run for HCP's</button>
+                                data-record="hcp" onclick="{!c.clickRunMode}">Run for HCP's
+                        </button>
                     </div>
                     <div class="slds-col slds-size_1-of-6">
                         <button class="slds-button slds-button_outline-brand"
-                                data-record="part" onclick="{!c.clickRunMode}">Run for Participant's</button>
+                                data-record="part" onclick="{!c.clickRunMode}">Run for Participant's
+                        </button>
                     </div>
                 </div>
             </div>
-        </lightning:accordion>
     </lightning:card>
 </aura:component>
