--- a/force-app/main/default/aura/ManualTask/ManualTask.cmp
+++ b/force-app/main/default/aura/ManualTask/ManualTask.cmp
@@ -30,6 +30,7 @@
     <aura:handler name="change" value="{!v.task.Start_Date__c}" action="{!c.doCheckFields}"/>
     <aura:handler name="change" value="{!v.task.ActivityDate}" action="{!c.doCheckFields}"/>
     <aura:handler name="change" value="{!v.task.Reminder_Date__c}" action="{!c.doCheckFields}"/>
+    <aura:handler name="change" value="{!v.statuses}" action="{!c.doCheckFields}"/>
     <aura:handler name="change" value="{!v.dayRemind}" action="{!c.doCheckFields}"/>
 
     <aura:method name="checkFields" action="{!c.doCheckFields}"/>
@@ -81,7 +82,7 @@
                     <div class="slds-col slds-size--1-of-2">
                         <div class="slds-grid slds-gutters">
                             <div class="slds-col slds-size--1-of-2">
-                                <lightning:checkboxGroup
+                                <lightning:checkboxGroup aura:id="field"
                                         name="patientStatus" label="Set Patient Status"
                                         options="{!v.patientStatuses}"
                                         value="{!v.statuses}" required="true"/>
