--- a/force-app/main/default/layouts/Trial_Survey__c-Trial Survey Layout Days.layout-meta.xml
+++ b/force-app/main/default/layouts/Trial_Survey__c-Trial Survey Layout Days.layout-meta.xml
@@ -17,10 +17,6 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Visible_To_Delegates__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
                 <field>Active_After_Days__c</field>
             </layoutItems>
             <layoutItems>
@@ -77,7 +73,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h0q000000Shxy</masterLabel>
+        <masterLabel>00h0E000001Hb0a</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
