--- a/force-app/main/default/layouts/Trial_Survey__c-Trial Survey Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Trial_Survey__c-Trial Survey Layout.layout-meta.xml
@@ -17,10 +17,6 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Visible_To_Delegates__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
                 <field>Active_On_Status__c</field>
             </layoutItems>
             <layoutItems>
@@ -79,7 +75,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h0q000000Shvs</masterLabel>
+        <masterLabel>00h0E000001Hb0Q</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
