--- a/force-app/main/default/layouts/Integration_VisitResult__c-Integration VisitResult Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Integration_VisitResult__c-Integration VisitResult Layout.layout-meta.xml
@@ -58,6 +58,10 @@
                 <behavior>Edit</behavior>
                 <field>NRIND__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>STUDYID__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
