--- a/force-app/main/default/layouts/Participant_Study_Enrollment__c-Participant Study Enrollment Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Participant_Study_Enrollment__c-Participant Study Enrollment Layout.layout-meta.xml
@@ -23,6 +23,10 @@
                 <behavior>Readonly</behavior>
                 <field>Days_After_Enrolled__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>IsRequestDataFromSDH__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
