--- a/force-app/main/default/layouts/Integration_Visits__c-Integration Visits Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Integration_Visits__c-Integration Visits Layout.layout-meta.xml
@@ -34,6 +34,10 @@
                 <behavior>Edit</behavior>
                 <field>ISDELETED__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>External_Key__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
