--- a/force-app/main/default/aura/AdminPanel/AdminPanel.css
+++ b/force-app/main/default/aura/AdminPanel/AdminPanel.css
@@ -9,58 +9,45 @@
 }
 
 .THIS .ad-card{
-    padding: 15px;
-    border: 1px solid #efefef;
-    border-radius: 10px;
     display: inline-flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 15px;
     background: #f9f9f9;
-    margin: 5px;
-    position: relative;
 }
 
-.THIS .slds-accordion__list-item {
-    border: none;
+.THIS th {
+    text-align: center;
+    width: 30px;
+}
+
+.THIS .ad-table td{
+    padding: 5px;
+    text-align: center;
+    width: 30px;
+}
+
+.THIS .slds-form-element__icon{
+    vertical-align: super;
+    line-height: 0;
 }
 
 .THIS .slds-text-title_bold{
     color: #585858;
 }
 
-.THIS .ad-time {
-    margin-left: 15px;
-    white-space: nowrap;
-    color: #929191;
-}
-
 /*Status color map*/
-.THIS .ad-state-not-started {
-    color: #4078de;
-    background-color: #a8d7ff;
-    padding: 5px 17px;
+.THIS .ad-state-running,
+.THIS .ad-state-stopped {
+    color: #ffffff;
+    padding: 2px 7px;
     border-radius: 5px;
-    border: 1px solid #83b4de;
 }
 
-.THIS .ad-state-waiting {
-    color: #b37518;
-    background-color: #fff8df;
-    padding: 5px 17px;
-    border-radius: 5px;
-    border: 1px solid #ecdca2;
-}
-
-.THIS .ad-state-executing {
-    color: #49a981;
-    background-color: #45e4a2;
-    padding: 5px 17px;
-    border-radius: 5px;
-    border: 1px solid #2ba974;
+.THIS .ad-state-stopped {
+    background-color: #c23934;
 }
 
 .THIS .ad-state-running {
-    color: #48bb61;
-    background-color: #8ff5b3;
-    padding: 5px 17px;
-    border-radius: 5px;
-    border: 1px solid #69d462;
+    background-color: #068049;
 }
