--- a/force-app/main/default/aura/OpenTaskPreviewPanel/OpenTaskPreviewPanel.cmp
+++ b/force-app/main/default/aura/OpenTaskPreviewPanel/OpenTaskPreviewPanel.cmp
@@ -12,13 +12,13 @@
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
     <!-- component body: -->
-    <c:HomePreviewTablePanel title="Open Task List">
+    <c:HomePreviewTablePanel title="{!$Label.c.PG_L_Open_Task_List}">
         <c:RRSpinner aura:id="spinner" size="small" showSpinner="true"/>
         <aura:if isTrue="{!v.initialized}">
             <aura:if isTrue="{!!empty(v.tasks)}">
                 <c:RRTable>
                     <tr>
-                        <th>Name</th>
+                        <th>{!$Label.c.Name}</th>
                         <th style="width:130px">{!$Label.c.Due_Date}</th>
                     </tr>
                     <aura:iteration items="{!v.tasks}" var="task">
@@ -42,7 +42,7 @@
             <c:EmptyListStub targetList="{!v.tasks}" iconName="none" message="{!$Label.c.PG_VP_L_No_Items_display}"/>
         </aura:if>
         <aura:set attribute="footer">
-            <c:RRLink page="study-workspace?tab=tab-tasks" label="See All"/>
+            <c:RRLink page="study-workspace?tab=tab-tasks" label="{!$Label.c.PG_L_See_All}"/>
         </aura:set>
     </c:HomePreviewTablePanel>
 
