--- a/force-app/main/default/pages/RRChangePassword.page
+++ b/force-app/main/default/pages/RRChangePassword.page
@@ -107,7 +107,7 @@
 
         .prfile-btn-container{
             display: flex;
-            justify-content: center;
+            justify-content: space-around;
         }
 
         .btn-upload-photo{
