--- a/force-app/main/default/layouts/Integration_VisitResult__c-Integration VisitResult Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Integration_VisitResult__c-Integration VisitResult Layout.layout-meta.xml
@@ -7,7 +7,7 @@
         <label>Information</label>
         <layoutColumns>
             <layoutItems>
-                <behavior>Required</behavior>
+                <behavior>Readonly</behavior>
                 <field>Name</field>
             </layoutItems>
             <layoutItems>
@@ -24,10 +24,6 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>DTC__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
                 <field>TESTCD__c</field>
             </layoutItems>
             <layoutItems>
@@ -37,14 +33,6 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>STRESU__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>MD5__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>ISDELETED__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -65,6 +53,22 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>External_Key__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>VSDTC__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Vital_or_Lab__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>MD5_Hash__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>IsDeletedInSDH__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
